--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faiza portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Faustina&family=Island+Moments&family=Lora:wght@600&family=Luxurious+Roman&family=Noto+Serif:wght@700&family=Poppins:ital,wght@0,400;1,200&family=Rokkitt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+    <div class="half-width">
+    <h1> Stay Focused on <br> <span class="lightcoral">Mission 2022 </span> </h1>
+    <p class="likha-boro">A self-driven attitude, willingness to learn and a strong presence of mind. 
+        If we could combine our passion as our work,then we will doing our best in terms of work performance.By developing my skills be web developer is my passion.
+        My mission is working hard for my passion.</p>
+    <a class="link-button" target="blank" href="https://www.linkedin.com/in/faiza-tasnim-203906229/">MY SKILLS</a>
+    <p class="likha-boro">scroll down to explore more about us </p>
+    </div>
+       <div class="half-width">
+        <img src="my-bg.png" alt="">
+       </div>
+    </section>
+        
 </body>
 </html>
