--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
         
         <div class="flex-con">
             <div id="mvg1">
+                <img src="mission.png">
                 <h2> <b>Mission </b> </h2>
                 <p class="likha-boro"> our mission is help you to be an honest, empathetic and impactful project leader. 
                     we will help you to improve youeself by completing this course and end of this year.</p>
             </div>
             <div id="mvg2">
+                <img src="vision.png">
                 <h2> <b>Vision</b> </h2>
                 <p class="likha-boro"> Our vision is a world where everyone is competing with their full potential;
                     where each person uses their intrinsic genius and leadership to deliver outstanding
                     value-added projects.</p>
             </div>
             <div id="mvg3">
+                <img src="goal.png">
                 <h2> <b>Goals </b></h2>
                 <p class="likha-boro"> Our goal is to complete your full programming knowledge. we will provide you source 
                 and a platfrom where you can practice your knowledge. </p>
